# meigu-monitor

./: .gitignore  README.md  pyproject.toml
app/: db.py  fetcher.py  main.py  models.py  prompts.py
app/templates/: index.html
openclaw/: meigu-skill.md  memo-skill.md  scheduled-prompt.md
